k8s/springboot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-app
  namespace: student-management
  labels:
    app: student-app
spec:
  replicas: 3

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1

  selector:
    matchLabels:
      app: student-app

  template:
    metadata:
      labels:
        app: student-app

    spec:
      containers:
      - name: student-app
        image: gannetejeswarnaidu/student-management-springboot:latest
        imagePullPolicy: Always

        ports:
        - containerPort: 8080

        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"

          limits:
            cpu: "500m"
            memory: "512Mi"

        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3

        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
