k8s/springboot-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: student-service
  namespace: student-management

spec:
  selector:
    app: student-app

  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30080

  type: NodePort
