k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: student-ingress
  namespace: student-management

spec:
  ingressClassName: nginx

  rules:
  - host: localhost

    http:
      paths:

      - path: /
        pathType: Prefix

        backend:
          service:
            name: student-service

            port:
              number: 80
